# QuVINE

./: README.md  pyproject.toml  qune_test.ipynb  quvine_demo.ipynb  requirements.txt
configs/: config.yaml  config_BioPlex3_asthma.yaml  config_BioPlex3_autism.yaml  config_BioPlex3_schizophrenia.yaml  config_HumanNet_asthma.yaml  config_HumanNet_autism.yaml  config_HumanNet_schizophrenia.yaml  config_PCNet_asthma.yaml  config_PCNet_autism.yaml  config_PCNet_schizophrenia.yaml  config_ProteomeHD_asthma.yaml  config_ProteomeHD_autism.yaml  config_ProteomeHD_schizophrenia.yaml  config_STRING_asthma.yaml  config_STRING_autism.yaml  config_STRING_schizophrenia.yaml
notebooks/: quvine_demo.ipynb  quvine_embedding.ipynb
outputs/manual_run/embeddings/: embedding_comparison_iter1.csv  embeddings_iter_0.npz  embeddings_iter_1.npz
qune/: __init__.py  main.py  pipeline.py
qune/analysis/: __init__.py  compare.py
qune/baselines/: node2vec.py
qune/corpus/: builder.py  operations.py
qune/data/: data_loader.py  preprocess.py
qune/embedding/: __init__.py  registry.py
qune/evaluation/: __init__.py  ranking.py
qune/fusion/: __init__.py  diagnostics.py  fuse.py
qune/utils/: logging.py  seed.py  utilities.py
qune/views/: __init__.py  generator.py  views.py
qune/walks/: base.py  ctqw.py  dtqw.py  rwr.py
src/quvine/: __init__.py  main.py  pipeline.py
src/quvine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/quvine/analysis/: __init__.py  analyze.py  compare.py
src/quvine/baselines/: __init__.py  node2vec.py
(+26 files in other folders)
