[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quvine"
version = "0.1.0"
description = "QuVINE: Quantum View-based Network Embeddings"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "scipy",
    "networkx",
    "pandas",
    "matplotlib",
    "hydra-core",
    "omegaconf",
    "gensim",
    "hiperwalk",
]

[project.scripts]
quvine = "quvine.main:main"

[tool.setuptools.packages.find]
where = ["src"]
